[package]
name = "expresso"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = { version = "0.1.0", path = "expresso/cocoa" }
colored = "2"
rustyline = "10.0.0"


[workspace]
members = [
  "expresso/cocoa",
  "expresso/blend",
]

[[bin]]
path = "expresso/blend/src/main.rs"
name = "expresso"
